# barIlanRepo

./: .gitignore
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/auth/biuclinicspschy05177164/: cli-inputs.json
amplify/backend/function/biuclinicspschy05177164PreTokenGeneration/: biuclinicspschy05177164PreTokenGeneration-cloudformation-template.json  function-parameters.json  parameters.json
amplify/backend/types/: amplify-dependent-resources-ref.d.ts
backend/: app.py  config.py  create_csv_files.py  files_waiting_validation.csv  lambda_video_to_s3.py  last_file_uploaded.csv  main_os_s3.py  main_sync_s3.py  pyproject.toml  requirements.txt  sessions_lionking_lionking.mp4-e3381617-812c-41ed-8b5c-2d6153b57893 (1).json  test.py  test_transcribe_json.ipynb
frontend/: .env.development  .env.production  package-lock.json  package.json
frontend/src/: App.js  aws-config.js  aws-exports.dev.js  aws-exports.prod.js
frontend/src/components/: AdminSearch.js  Header.js  HomePage.js  Login.js  SearchComponent.js  VideoModal.js
frontend/src/components/ListItems/: PatientsListItems.js  StudentsListItems.js  VideosListItems.js
frontend/src/components/lists/: InstructorsList.js  PatientsList.js  StudentsList.js  VideosList.js
frontend/src/hooks/: usePatients.js  useStudents.js  useVideos.js
frontend/src/style/: Footer.scss  Header.scss  HomePage.scss  global.scss
frontend/src/utils/: getSignedUrl.js  getVideoMetadata.js
(+2 files in other folders)
